# Jarvis

./: .gitignore  CLAUDE.md  SPEC.md  config.yaml  jarvis_robot_v1.html  main.py  pyproject.toml
.atl/: skill-registry.md
.engram/: manifest.json
core/: audio_capture.py  config_loader.py  dispatcher.py  llm_claude.py  llm_gemini.py  llm_ollama.py  llm_router.py  protocols.py  stt.py  tts.py  wake_word.py
memory/: __init__.py  context.py  db.py
scripts/: hyprland-rules.conf  trigger.sh
tests/: conftest.py  test_config_loader.py  test_dispatcher.py  test_llm_router.py  test_memory_db.py
tests/fixtures/: config.yaml
tools/: __init__.py  apps.py  browser.py  clipboard.py  files.py  notifications.py  system.py  terminal.py
ui/: __init__.py  overlay.py  tray.py
ui/assets/: styles.qss  waveform.py
